--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
  <ul class="menu red">
 	<li ><a href="index.html" >Home</a></li>
 	<li><a href="c2.html" >Domenii</a></li>
-	<li><a href="top.html" >Top închirieri</a></li>
+	<li><a href="top.html" >Top ï¿½nchirieri</a></li>
     <li class="current"><a href="contact.html" >Contact</a></li>
 </ul>
 </div>
@@ -41,10 +41,10 @@
  <td valign="top">
  
 <div style="padding-left:40px; padding-bottom:100px;">
-<h1>Nume autor</h1>
-<h2>Liceul Teoretic "..."</h2>
-<h2>Clasa: 12B</h2>
-<h2>Profesor coordonator: </h2>
+<h1>Nume autor: Carbunaru Andrei, Nitu Delia</h1>
+<h2>Liceul Teoretic "Serban Voda"</h2>
+<h2>Clasa: 12A</h2>
+<h2>Profesor coordonator: Cristina Cojocaru </h2>
 </div>
  
  </td>
