--- a/top.html
+++ b/top.html
@@ -18,7 +18,7 @@
  <ul class="menu red">
 	<li><a href="index.html" >Home</a></li>
 	<li><a href="c2.html" title="">Domenii</a></li>
-	<li class="current"><a href="top.html" >Top închirieri</a></li>
+	<li class="current"><a href="top.html" >Top inchirieri</a></li>
 	
     
     <li><a href="contact.html" >Contact</a></li>
